<resources>
    <string name="appName">Layout Views Demo</string>
    <string name="login">Login</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="linear">LinearLayout</string>
    <string name="register">Register</string>
    <string name="parentRightAligned">Parent right aligned</string>
    <string name="textAlignedWithRegister">Text aligned with register</string>
    <string name="anotherText">Another text</string>
    <string name="findWhat">Find what:</string>
    <string name="keywords">Keywords</string>
    <string name="find">Find</string>
    <string name="matchCase">Match case</string>
    <string name="wholeWords">Whole words</string>
    <string name="relative">RelativeLayout</string>
    <string name="relative_find">RelativeLayout complex</string>
    <string name="doubleWeight">Double weight</string>
    <string name="singleWeight">Single weight</string>
    <string name="linearWeight">LinearLayout weights</string>
    <string name="list">ListView</string>
    <string name="numberText">Detail info for number %1$d</string>
    <string name="other">Other</string>
    <string name="recycler">RecyclerView</string>
    <string name="fab">Floating Action Button</string>
    <string name="nothingToShow">Nothing to show</string>
    <string name="numberLine">Number line:</string>
    <string name="topicImage">Topic image</string>
    <string name="github">GitHub</string>
    <string name="githubDesc">GitHub is a version control system for software projects</string>
    <string name="cpp">C++</string>
    <string name="cppDesc">C++ is a programming language with both low and high level features</string>
    <string name="rust">Rust</string>
    <string name="rustDesc">Rust is a systems programming language that runs blazingly fast, prevents segfaults, and
        guarantees thread safety
    </string>
    <string name="numFabClicks">You clicked the Floating Action Button %d times already</string>
    <string name="basic">Basic</string>
    <string name="checkBox">CheckBox</string>
    <string name="button">Button</string>
    <string name="radio">RadioButton</string>
    <string name="switchText">Switch</string>
    <string name="toggle">ToggleButton:</string>
</resources>
