<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingTop="@dimen/activity_vertical_margin">

    <Button
            android:id="@+id/buttonList"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/list"/>

    <Button
            android:id="@+id/buttonRecycler"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/recycler"/>

    <Button
            android:id="@+id/buttonFab"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/fab"/>

    <Button
        android:id="@+id/buttonBasic"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/basic" />

</LinearLayout>
