<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        tools:context="de.schueler.layoutviewsdemo.activity.BasicActivity">

    <Button android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button"/>

    <CheckBox android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:text="@string/checkBox"/>

    <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

        <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/radio"/>

        <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/radio"/>

        <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="@string/radio"/>

    </RadioGroup>

    <Switch android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/switchText"/>

    <TextView
            android:layout_width="wrap_content"
              android:layout_height="wrap_content"
    android:text="@string/toggle"/>

    <ToggleButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

</LinearLayout>
